<resources>
    <string name="app_name">MyAssociation</string>
    <string name="app_version">4.3</string>
    <string name="action_settings">Guide</string>
    <string name="b1">E-Mail</string>
    <string name="b2">Contact</string>
    <string name="b3">Directory</string>
    <string name="b4">Weather</string>
    <string name="b5">Calendar</string>
    <string name="b6">Budget</string>
    <string name="b7">Documents</string>
    <string name="b8">Message\nBoard</string>
    <string name="b9">My Info</string>
    <string name="b10">Push\nHistory</string>
    <string name="b11">Service Providers</string>
    <string name="b12">Change/Add\nAssociation</string>
    <string name="b13">Pet\nDirectory</string>
    <string name="b14">Guest Directory</string>
    <string name="b15">Auto\nDirectory</string>
    <string name="b16">Tools</string>
    <string name="b17">Push/Email</string>
    <string name="b18">Maintenance\nItems</string>
    <string name="toolslayoutb1">Event\nCalendar\nManager</string>
    <string name="toolslayoutb2">Load Budget\nor\nExpense</string>
    <string name="toolslayoutb3">Update\nRoster</string>
    <string name="toolslayoutb4">Backup\nAssociation\nFiles</string>
    <string name="toolslayoutb5">Restore\nAssociation\nFiles</string>
    <string name="toolslayoutb6">Build\nText\nDirectory\nFile</string>
    <string name="toolslayoutb7">Email PDF\nFiles</string>
    <string name="toolslayoutb8">Load Misc\nPDF Files</string>
    <string name="toolslayoutb9">Load Assoc\nPDF Files</string>
    <string name="toolslayoutb10">Guest\nAccess\nReport</string>
    <string name="toolslayoutb11">Edit\nMaintenance\nCategories</string>
    <string name="toolslayoutb12">Admin\nMessage\nBoard</string>
    <string name="edittext_hint"><font size="12">type name or address\nclear with long click</font></string>
    <string name="weather_api">http://api.worldweatheronline.com/free/v1/weather.ashx?q=34103&amp;format=json&amp;key=u5emertxp3xptfs3vzskteyk</string>
    <string name="change_city">Change city</string>
    <string name="weather_sunny">&#xf00d;</string>
    <string name="weather_clear_night">&#xf02e;</string>
    <string name="weather_foggy">&#xf014;</string>
    <string name="weather_cloudy">&#xf013;</string>
    <string name="weather_rainy">&#xf019;</string>
    <string name="weather_snowy">&#xf01b;</string>
    <string name="weather_thunder">&#xf01e;</string>
    <string name="weather_drizzle">&#xf01c;</string>
    <string name="place_not_found">Sorry, no weather data found.</string>
    <string name="emergency_contact">Emergency Contact</string>
    <string name="cancel">cancel</string>
    <string name="update_myinfo">Update MyInfo</string>
    <string name="select_what_to_update">Select What Information to Update</string>
    <string name="personal_info">Personal Info</string>
    <string name="pet_info">Pet Info</string>
    <string name="auto_info">Auto Info</string>
    <string name="guest_info">Guest Info</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="address_1">Address 1</string>
    <string name="address_2">Address 2</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip2">Zip</string>
    <string name="home_phone">home phone 10 digits</string>
    <string name="mobile_phone">mobile phone 10 digits</string>
    <string name="email_address">email address</string>
    <string name="emergency_contact_name">name</string>
    <string name="emergency_contact_number">phone number 10 digits</string>
    <string name="address_12">Address 1</string>
    <string name="address_21">Address 2</string>
    <string name="city2">City</string>
    <string name="home_phone2">home phone 10 digits</string>
    <string name="zip3">Zip</string>
    <string name="state2">State</string>
    <string name="update">UPDATE</string>
    <string name="address">Address</string>
    <string name="middle_name">Middle Name</string>
    <string name="group_1">Group 1</string>
    <string name="group_2">Group 2</string>
    <string name="member_groups">Member Groups</string>
    <string name="group_3">Group 3</string>
    <string name="group_4">Group 4</string>
    <string name="group_5">Group 5</string>
    <string name="group_6">Group 6</string>
    <string name="group_7">Group 7</string>
    <string name="group_8">Group 8</string>
    <string name="winter">Winter</string>
    <string name="status">status</string>
</resources>