<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
    android:background="#070707">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:id="@+id/buttonSave"
        android:layout_gravity="right"
        android:background="@drawable/button_rounded_corners_black_gray_bg"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textColor="#f2f4b5" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollViewInfo"
        android:background="@drawable/info_background"
        android:padding="30dp">


        <LinearLayout
            android:layout_width="match_parent"
                android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="vertical">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="2"
                android:layout_weight="0.10">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:ems="10"
                    android:id="@+id/editTextLastName"
                    android:hint="@string/last_name"
                    android:layout_weight="1" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords|textPersonName"
                    android:ems="10"
                    android:id="@+id/editTextFirstName"
                    android:hint="@string/first_name"
                    android:layout_weight="1" />
            </LinearLayout>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:inputType="textCapWords"
                android:ems="10"
                android:id="@+id/editTextMiddleName"
                android:hint="@string/middle_name"
                android:layout_weight="0.10"
                android:layout_gravity="center_horizontal" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/summerAddressLabel"
                android:layout_gravity="center_horizontal"
                android:text="@string/address"
                android:layout_weight="0.10" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:ems="10"
                android:id="@+id/editTextAddress1"
                android:hint="@string/address_1"
                android:inputType="textCapWords"
                android:layout_weight="0.10" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:ems="10"
                android:id="@+id/editTextAddress2"
                android:hint="@string/address_2"
                android:inputType="textCapWords"
                android:layout_weight="0.10" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="2"
                android:layout_weight="0.10">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/cityEditText"
                    android:hint="@string/city"
                    android:layout_weight="1"
                    android:inputType="textCapWords" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textCapCharacters"
                    android:ems="10"
                    android:id="@+id/stateEditText"
                    android:hint="@string/state"
                    android:layout_weight="1"
                    android:capitalize="characters" />
            </LinearLayout>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:inputType="number|textPostalAddress"
                android:ems="10"
                android:id="@+id/zipEditText"
                android:hint="@string/zip2"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:layout_weight="0.10" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:inputType="phone"
                android:ems="10"
                android:id="@+id/homePhoneEditText"
                android:hint="@string/home_phone"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:layout_weight="0.10" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:inputType="phone"
                android:ems="10"
                android:id="@+id/mobilePhoneEditText"
                android:hint="@string/mobile_phone"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:layout_weight="0.10" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/emailEditText"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:layout_weight="0.10" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/textView6"
                android:layout_gravity="center_horizontal"
                android:text="@string/emergency_contact"
                android:layout_weight="0.10" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/emergencyContactEditText"
                android:hint="@string/emergency_contact_name"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:inputType="textCapWords"
                android:capitalize="words"
                android:layout_weight="0.10" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/emergencyContactPhoneEditText"
                android:hint="@string/emergency_contact_number"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:inputType="phone"
                android:layout_weight="0.10" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/winterAddressLabel"
                android:layout_gravity="center_horizontal"
                android:text="@string/winter"
                android:layout_weight="0.10" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:inputType="textCapWords"
                android:ems="10"
                android:id="@+id/winter_address1EditText"
                android:hint="@string/address_12"
                android:capitalize="words"
                android:layout_weight="0.10" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".10"
                android:weightSum="2">

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:ems="10"
                    android:id="@+id/winter_address2EditText"
                    android:hint="@string/address_21"
                    android:capitalize="words"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:id="@+id/textViewStatus"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:visibility="gone"
                    android:background="@drawable/button_rounded_corners_black_gray_bg"
                    android:textColor="#FFEABB"
                    android:text="@string/status"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="2"
                android:layout_weight="0.10">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:ems="10"
                    android:id="@+id/winter_cityEditText"
                    android:hint="@string/city2"
                    android:text="@string/city"
                    android:layout_weight="1"
                    android:capitalize="words" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textCapCharacters"
                    android:ems="10"
                    android:id="@+id/winter_stateEditText"
                    android:hint="@string/state2"
                    android:layout_weight="1"
                    android:capitalize="characters" />
            </LinearLayout>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/winter_zipEditText"
                android:hint="@string/zip3"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:layout_weight="0.10" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:inputType="phone"
                android:ems="10"
                android:id="@+id/winter_homePhoneEditText"
                android:hint="@string/home_phone2"
                android:gravity="center_horizontal"
                android:layout_weight="0.10" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/winter_emailEditText"
                android:hint="@string/email_address"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:layout_weight="0.10" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/llGroups">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/member_groups"
                    android:id="@+id/textViewMemberGroups"
                    android:background="#f9f5f5"
                    android:textSize="26sp"
                    android:padding="10dp"
                    android:textStyle="bold"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dp">

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/editTextGroup1"
                        android:layout_weight="1"
                        android:background="#fcf7f7"
                        android:layout_marginRight="5dp"
                        android:hint="@string/group_1"
                        android:textSize="16sp"
                        android:padding="10dp"
                        android:layout_marginLeft="0dp"
                        android:inputType="textCapWords" />
                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/editTextGroup2"
                        android:layout_weight="1"
                        android:background="#fcf7f7"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="0dp"
                        android:hint="@string/group_2"
                        android:textSize="16sp"
                        android:padding="10dp"
                        android:inputType="textCapWords" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dp">
                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/editTextGroup3"
                        android:layout_weight="1"
                        android:background="#fcf7f7"
                        android:layout_marginLeft="0dp"
                        android:layout_marginRight="5dp"
                        android:hint="@string/group_3"
                        android:textSize="16sp"
                        android:padding="10dp"
                        android:inputType="textCapWords" />
                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/editTextGroup4"
                        android:layout_weight="1"
                        android:background="#fcf7f7"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="0dp"
                        android:hint="@string/group_4"
                        android:textSize="16sp"
                        android:padding="10dp"
                        android:inputType="textCapWords" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dp">
                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/editTextGroup5"
                        android:layout_weight="1"
                        android:background="#fcf7f7"
                        android:layout_marginLeft="0dp"
                        android:layout_marginRight="5dp"
                        android:hint="@string/group_5"
                        android:textSize="16sp"
                        android:padding="10dp"
                        android:inputType="textCapWords" />
                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/editTextGroup6"
                        android:layout_weight="1"
                        android:background="#fcf7f7"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="0dp"
                        android:hint="@string/group_6"
                        android:textSize="16sp"
                        android:padding="10dp"
                        android:inputType="textCapWords" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dp">
                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/editTextGroup7"
                        android:layout_weight="1"
                        android:background="#fcf7f7"
                        android:layout_marginLeft="0dp"
                        android:layout_marginRight="5dp"
                        android:hint="@string/group_7"
                        android:textSize="16sp"
                        android:padding="10dp"
                        android:inputType="textCapWords" />
                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/editTextGroup8"
                        android:layout_weight="1"
                        android:background="#fcf7f7"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="0dp"
                        android:hint="@string/group_8"
                        android:textSize="16sp"
                        android:padding="10dp"
                        android:inputType="textCapWords" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</LinearLayout>