<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="7"
    android:background="@drawable/button_rounded_corners_white_white_bg_forpops">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/update_myinfo"
        android:id="@+id/textViewTitle"
        android:layout_gravity="center_horizontal"
        android:textSize="24sp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/select_what_to_update"
        android:id="@+id/textViewTitle2"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:layout_marginBottom="0dp"
        android:layout_weight="1"
        android:lines="2"
        android:gravity="center"
        android:layout_marginTop="0dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/personal_info"
        android:id="@+id/textViewMyInfo"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:clickable="true"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:textColor="@color/iPhoneblue" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/pet_info"
        android:id="@+id/textViewPetInfo"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:clickable="true"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:textColor="@color/iPhoneblue" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/auto_info"
        android:id="@+id/textViewAutoInfo"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:clickable="true"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:textColor="@color/iPhoneblue" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/guest_info"
        android:id="@+id/textViewGuestInfo"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:clickable="true"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:textColor="@color/iPhoneblue" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/cancel"
        android:id="@+id/textViewCancel"
        android:layout_gravity="center_horizontal"
        android:textSize="24sp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:clickable="true"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:textColor="@color/iPhoneblue"
        android:textStyle="bold" />
</LinearLayout>